force-app/main/default/objects/Project_Score_Tracker__c/Project_Score_Tracker__c.object-meta.xml
<CustomObject>
    <label>Project Score Tracker</label>
    <nameField>
        <label>Project Score Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Score Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>