force-app/main/default/objects/Project_Score_Tracker__c/fields/Compliance_Related__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark true if the project affects compliance</description>
    <label>Compliance Related</label>
    <type>Checkbox</type>
</CustomField>