force-app/main/default/objects/Project_Score_Tracker__c/fields/Days_to_Plan__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Plan__c</fullName>
    <description>Automatically calculates the target planning date by adding 10 days to the record creation date</description>
    <formula>CreatedDate + 10</formula>
    <inlineHelpText>Target date for completing the planning phase (10 days from creation)</inlineHelpText>
    <label>Days to Plan</label>
    <type>Date</type>
</CustomField>