force-app/main/default/objects/Project_Score_Tracker__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The raw score value for the project tracker. Valid range: 0-100.</description>
    <inlineHelpText>Enter the initial project score</inlineHelpText>
    <label>Score</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>