force-app/main/default/objects/Project_Score_Tracker__c/fields/Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score__c</fullName>
    <label>Weighted Score</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>